--- a/.github/workflows/yt_utils.yml
+++ b/.github/workflows/yt_utils.yml
@@ -1,5 +1,5 @@
-name: yt_utils-CI
-run-name: ${{ github.actor }} is validating the yt_utils repo
+name: ytpa_utils-CI
+run-name: ${{ github.actor }} is validating the ytpa_utils repo
 on: [push]
 jobs:
   test-and-deploy:
@@ -7,21 +7,20 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v3
-      - run: cd /home/runner/work/yt_utils/yt_utils
+      - run: cd /home/runner/work/ytpa_utils/ytpa_utils
       - name: setup env vars
         run: make build-gha
       - name: setup conda env
         uses: conda-incubator/setup-miniconda@v2
         with:
-          activate-environment: yt_utils
+          activate-environment: ytpa_utils
           environment-file: environment.yml
           auto-activate-base: false
       - name: run tests
         run: make test-gha
         env:
           PYTHONPATH: ${{ env.PYTHONPATH }}
-      - name: deploy to PyPI
-        run: make deploy USERNAME="$PYPI_USERNAME" PASSWORD="$PYPI_PASSWORD"
+      - name: publish to PyPI
+        run: make publish
         env:
-          PYPI_USERNAME: ${{ secrets.PYPI_USERNAME }}
           PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
