--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: yt_utils
+name: ytpa_utils
 channels:
   - defaults
 dependencies:
@@ -6,5 +6,7 @@ dependencies:
   - pandas=2.0.3
   - numpy=1.25.2
   - pytest=7.1.2
+  - coverage=7.2.2
   - poetry=1.4.0
-prefix: /home/nuc/miniconda3/envs/yt_utils
+  - pillow=10.0.1
+prefix: /home/nuc/miniconda3/envs/ytpa_utils
