--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "yt-utils"
-version = "0.1.0"
+name = "ytpa-utils"
+version = "0.1.4"
 description = "Utils for the YouTube Predictive Analytics system"
 authors = ["Johannes Traa"]
 license = "MIT"
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.11.5"
 pandas = "^2.0.3"
 numpy = "^1.25.2"
+pytest = "^7.4.3"
 
 [tool.poetry.dev-dependencies]
 
