--- a/environment.yml
+++ b/environment.yml
@@ -9,4 +9,5 @@ dependencies:
   - coverage=7.2.2
   - poetry=1.4.0
   - pillow=10.0.1
+  - gensim=4.3.0
 prefix: /home/nuc/miniconda3/envs/ytpa_utils
