--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,7 @@ dependencies:
   - python=3.11.5
   - pandas=2.0.3
   - numpy=1.25.2
+  - scipy=1.11.3
   - pytest=7.1.2
   - coverage=7.2.2
   - poetry=1.4.0
